added read-only mode for storage

--- a/config/resumes.properties
+++ b/config/resumes.properties
@@ -1,3 +1,5 @@
+storage.type=SQL
+storage.read.only=FALSE
 storage.dir=C:/projects/repo/BaseJava/storage/
 db.url=jdbc:postgresql://localhost:5432/resumes
 db.user=postgres
