fixed js for dynamic content; added option to lock certain uuids from changes

--- a/config/resumes.properties
+++ b/config/resumes.properties
@@ -1,6 +1,7 @@
 storage.type=SQL
-storage.read.only=FALSE
 storage.dir=C:/projects/repo/BaseJava/storage/
 db.url=jdbc:postgresql://localhost:5432/resumes
 db.user=postgres
 db.password=
+storage.read.only=FALSE
+locked.uuids=
